# password_manager

./: pyproject.toml
config/: settings.py  urls.py
password/: admin.py  apps.py  errors.py  jobs.py  models.py  services.py  urls.py  validators.py  views.py
password/migrations/: 0001_user.py  0002_password.py
