[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Marco Lopes <marco.lopes.araujo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
